--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/app
+      - ./hf_cache:/hf_cache
     environment:
       - OPENAI_API_KEY= ${OPENAI_API_KEY:-}
     ports:
