--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+transformers==4.16.1
+torch
 openai~=0.27.8
 pandas~=2.0.3
 sqlalchemy~=2.0
@@ -6,6 +8,7 @@ psycopg2-binary==2.9.3
 environs
 fastapi~=0.101.1
 uvicorn~=0.23.2
-pip~=21.2.4
+pip>=23.2.1
 httpx~=0.24.1
 pydentic
+
